# sysmon

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
sysmon/: __init__.py  cli.py  config.py  export.py  paths.py
sysmon/collectors/: __init__.py  cpu.py  disk.py  gpu.py  memory.py  network.py  process.py  registry.py  service.py
sysmon/display/: __init__.py  brief.py  components.py  dashboard.py  panels.py  snapshot.py  sparkline.py  title_worker.py  top_live.py
tests/: test_components.py  test_config.py  test_cpu.py  test_disk.py  test_disk_multi.py  test_memory.py  test_network.py  test_network_multi.py  test_panels.py  test_process.py  test_registry.py  test_service.py  test_sparkline.py
