[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon"
version = "0.1.0"
description = "A beautiful system monitoring CLI tool"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "GPUtil>=1.4.0",
]

[project.scripts]
sysmon = "sysmon.cli:app"
