[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysmon"
version = "0.1.0"
description = "A beautiful system monitoring CLI tool"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "SysMon Contributors" }]
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "GPUtil>=1.4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
sysmon = "sysmon.cli:app"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
